[package]
name = "evpn_router"
version = "0.1.0"
build = "build.rs"


[lib]
name = "evpn_router"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { git = "https://github.com/hansihe/rustler", branch = "remove_nif_from_types"}
rustler_codegen = { git = "https://github.com/hansihe/rustler", branch = "remove_nif_from_types"}
bufstream = "0.1.2" 
lazy_static = "1.0.0"
libc = "0.2"