[package]
name = "gobgp"
version = "0.1.0"
authors = ["HansiHE <hansihe@hansihe.com>"]

[lib]
name = "gobgp"
path = "src/lib.rs"
crate-type = ["dylib"]

[package.metadata.release]

[dependencies]
rustler = { git = "https://github.com/hansihe/rustler", branch = "remove_nif_from_types"}
rustler_codegen = { git = "https://github.com/hansihe/rustler", branch = "remove_nif_from_types"}
bufstream = "0.1.2" 
lazy_static = "1.0.0"